--- a/films.html
+++ b/films.html
@@ -15,7 +15,7 @@
 		<div class="header">
 			<div class="logo">
 				<div class="logo_text">
-					<h1><a href="/">КиноМонстр</a></h1>
+					<h1><a href="./index.html">КиноМонстр</a></h1>
 					<h2>Кино - наша страсть!</h2>
 				</div>
 			</div>
@@ -23,11 +23,11 @@
 			<div class="menubar">
 				
 				<ul class="menu">
-					<li><a href="file:///C:/Users/attij/Desktop/%D0%9A%D0%B8%D0%BD%D0%BE%D0%9C%D0%BE%D0%BD%D1%81%D1%82%D1%80/index.html">Главная</a></li>
-					<li class="selected"><a href="file:///C:/Users/attij/Desktop/%D0%9A%D0%B8%D0%BD%D0%BE%D0%9C%D0%BE%D0%BD%D1%81%D1%82%D1%80/films.html#">Фильмы</a></li>
+					<li><a href="./index.html">Главная</a></li>
+					<li class="selected"><a href="./films.html">Фильмы</a></li>
 					<li><a href="#">Сериалы</a></li>
 					<li><a href="rating.html">Рейтинг фильмов</a></li>
-					<li><a href="file:///C:/Users/attij/Desktop/%D0%9A%D0%B8%D0%BD%D0%BE%D0%9C%D0%BE%D0%BD%D1%81%D1%82%D1%80/contact.html">Контакты</a></li>
+					<li><a href="./contact.html">Контакты</a></li>
 				</ul>
 
 			</div>
@@ -120,11 +120,11 @@
 
 		<div class="footer">
 			<p>
-				<a href="#">Главная</a> | 
-				<a href="#">Фильмы</a> |
+				<a href="./index.html">Главная</a> | 
+				<a href="./films.html">Фильмы</a> |
 				<a href="#">Сериалы</a> |
-				<a href="#">Рейтинг фильмов</a> |
-				<a href="#">Контакты</a>  
+				<a href="./rating.html">Рейтинг фильмов</a> |
+				<a href="./contact.html">Контакты</a>  
 			</p>
 			<p>wh-db.com</p>
 		</div>
